Bug 406074 - Unused setting "Forecast (history)" for home view
Summary: Unused setting "Forecast (history)" for home view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-31 11:41 UTC by Thomas Baumgart
Modified: 2019-03-31 17:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-03-31 11:41:45 UTC
SUMMARY
The settings for the home view show an entry "Forecast (history)" which does not have any effect.

STEPS TO REPRODUCE
1. Display home view
2. Swap selection of Forecast (history) in settings
3. Display home view

OBSERVED RESULT
No visual changes on home view

EXPECTED RESULT
Show effect on home page.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-03-31 17:18:57 UTC
Git commit 66157f2d365b8c8259730c8749161cb0aad4c033 by Thomas Baumgart.
Committed on 31/03/2019 at 11:45.
Pushed by tbaumgart into branch '5.0'.

Forecast (history) has no effect on home view

The home view section selector in the settings has an entry "Forecast
(history)" which does not show any effect on screen when changed. Since
it is currently not used, it is removed from the settings list. It will
be kept in source code (marked as unused) since the order of the entries
and their index must not change to maintain backward compatibility of
the settings.
FIXED-IN: 5.0.4

M  +8    -6    kmymoney/dialogs/settings/ksettingshome.cpp
M  +1    -1    kmymoney/kmymoneyutils.cpp
M  +2    -2    kmymoney/views/khomeview_p.h

https://commits.kde.org/kmymoney/66157f2d365b8c8259730c8749161cb0aad4c033